<resources>
    <string name="app_name">Crealchemy</string>
    <string name="action_settings">Settings</string>
    <string name="backup_agent">BackupAgent</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="title_activity_create_parents">CreateParentsActivity</string>
    <string name="title_activity_create_relationships">CreateRelationshipsActivity</string>
    <string name="title_activity_delete">DeleteActivity</string>

    <string name="button_done">Done</string>
    <string name="button_parents">Add Parents</string>
    <string name="button_play">Play</string>
    <string name="button_create">Create</string>
    <string name="button_add">Add</string>
    <string name="button_combine">Combine</string>

    <string name="edittext_name">Name</string>

    <string name="menu_delete">Delete</string>

    <string name="toast_invalid_element">Element is invalid or already exists</string>
    <string name="toast_found_element">You just made: %1$s</string>
    <string name="toast_not_such_element">That element hasn\'t been created…yet!</string>

    <string name="textview_one">1</string>
    <string name="textview_two">2</string>
    <string name="textview_plus_sign">+</string>

    <string name="content_description_parent_1">Icon for Parent 1</string>
    <string name="content_description_parent_2">Icon for Parent 2</string>
    <string name="content_description_element">Icon for Element</string>
    <string name="content_description_play_title">Play</string>
    <string name="content_description_create_title">Create</string>
    <string name="content_description_placeholder">Placeholder</string>
    <string name="content_description_delete_title">Delete</string>

    <string name="listview_item_parents">%1$s &amp; %2$s</string>
    <string name="button_delete">Delete</string>
    <string name="menu_camera">Capture from Camera</string>
    <string name="menu_gallery">Select from Gallery</string>
    <string name="content_description_title">title</string>
    <string name="copyright">©2016 Caitlin Tibbetts</string>
    <string name="content_description_achievements">achievements</string>
    <string name="placeholdertext_element_name">elementName</string>
    <string name="content_description_achievement">achievement</string>
    <string name="button_achievement">Achievements</string>
    <string name="content_description_parents_title">Add Parents</string>
    <string name="toast_new_achievement">You\'ve gotten a new Achievement!</string>
</resources>
