<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.caitlin.crealchemy.CreateActivity">

    <ImageView
        android:id="@+id/imageViewCreate"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/content_description_create_title"
        android:src="@drawable/create" />

    <ImageView
        android:id="@+id/imageViewPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_below="@+id/imageViewCreate"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_description_placeholder"
        android:src="@drawable/placeholder" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewElementName"
        android:imeOptions="actionDone"
        android:inputType="text"
        tools:hint="@string/edittext_name"
        tools:ignore="LabelFor" />


    <TextView
        android:id="@+id/textViewElementName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewPlaceholder"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/edittext_name"
        android:textSize="20sp"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/buttonCreateParents"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/editTextName"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/buttonBackground"
        android:clickable="true"
        android:text="@string/button_parents"
        android:textColor="#ff000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonDone"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="@dimen/buttonDoneHeight"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:background="@color/buttonBackground"
        android:clickable="true"
        android:text="@string/button_done"
        android:textColor="#ff000000"
        android:textSize="20sp" />

</RelativeLayout>
